<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/boarding">

    <fragment
        android:id="@+id/boarding"
        android:name="com.project.androidunsplash.ui.boarding.BoardingFragment"
        android:label="@string/title_boarding"
        tools:layout="@layout/fragment_boarding" >
        <action
            android:id="@+id/action_boarding_to_navigation_main"
            app:destination="@id/navigation_main" />
    </fragment>

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.project.androidunsplash.ui.main.fragment.MainCommonFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main_common" >
        <action
            android:id="@+id/action_navigation_main_to_navigation_main_search"
            app:destination="@id/navigation_main_search" />
        <action
            android:id="@+id/action_navigation_main_to_navigation_favourite_image_item"
            app:destination="@id/navigation_favourite_image_item" />
    </fragment>

    <fragment
        android:id="@+id/navigation_main_search"
        android:name="com.project.androidunsplash.ui.main.fragment.MainSearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_main_search" >
        <action
            android:id="@+id/action_navigation_main_search_to_navigation_main"
            app:destination="@id/navigation_main" />
        <action
            android:id="@+id/action_navigation_main_search_to_navigation_favourite_image_item"
            app:destination="@id/navigation_favourite_image_item" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourite_collection_list"
        android:name="com.project.androidunsplash.ui.favourite.fragment.FavouriteCollectionListFragment"
        android:label="@string/title_favourite_collection_list"
        tools:layout="@layout/fragment_favourite_collection_list" >
        <action
            android:id="@+id/action_navigation_favourite_collection_list_to_navigation_favourite_image_list"
            app:destination="@id/navigation_favourite_image_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourite_image_list"
        android:name="com.project.androidunsplash.ui.favourite.fragment.FavouriteImageListFragment"
        android:label="@string/title_favourite_image_list"
        tools:layout="@layout/fragment_favourite_image_list" >
        <action
            android:id="@+id/action_navigation_favourite_image_list_to_navigation_favourite_collection_list"
            app:destination="@id/navigation_favourite_collection_list" />
        <action
            android:id="@+id/action_navigation_favourite_image_list_to_navigation_favourite_image_item"
            app:destination="@id/navigation_favourite_image_item" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourite_image_item"
        android:name="com.project.androidunsplash.ui.favourite.fragment.FavouriteImageItemFragment"
        android:label="@string/title_favourite_image_item"
        tools:layout="@layout/fragment_favourite_image_item" >
        <action
            android:id="@+id/action_navigation_favourite_image_item_to_navigation_favourite_image_list"
            app:destination="@id/navigation_favourite_image_list" />
        <action
            android:id="@+id/action_navigation_favourite_image_item_to_navigation_main_search"
            app:destination="@id/navigation_main_search" />
        <action
            android:id="@+id/action_navigation_favourite_image_item_to_navigation_main"
            app:destination="@id/navigation_main" />
        <action
            android:id="@+id/action_navigation_favourite_image_item_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.project.androidunsplash.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_boarding"
            app:destination="@id/boarding" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_favourite_image_item"
            app:destination="@id/navigation_favourite_image_item" />
    </fragment>

</navigation>